# snake-wasm

./: Cargo.toml  README.md  app.bundle.js  game_manager.bundle.js  index.html
src/: lib.rs  main.rs
src/domain/: board.rs  food.rs  game_over_event.rs  mod.rs  snake.rs
src/geometry/: line_segment.rs  mod.rs  rectangle.rs  vector.rs
src/snake/: mod.rs  snake_game.rs
src/snake/domain/: board.rs  direction.rs  game_over_event.rs  mod.rs  snake.rs  square.rs
src/snake/domain/square/: empty_square.rs  food_square.rs  mod.rs  snake_square.rs
www/: package-lock.json  package.json  run.ps1  tsconfig.json  webpack.config.js
www/src/: index.ts  style.css
www/src/snake-game/: config.ts  input-system.ts  rendering-system.ts  snake-game-manager.ts
www/src/snake-game/components/: canvas-container.ts  scoreboard.ts
